Added profile photo and name to the conversation
Added profile photo and name to the conversation and added a post operation in /conversations/ to create a new conversation
